--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-mirror-switch-tools (1.0.1) unstable; urgency=medium
+mirror-switching-tool (1.0.1) unstable; urgency=medium
 
-  * update confirm messgae 
+  * update confirm messgae
 
  -- Kaisheng Ye <kaisheng.ye@gmail.com>  Sun, 26 Jul 2015 00:36:06 +0800
 
-mirror-switch-tools (1.0.0) unstable; urgency=low
+mirror-switching-tool (1.0.0) unstable; urgency=low
 
   * Init
 
